<resources>
    <string name="app_name">JectpackDemoKotlin</string>
    <string name="please_input_city_name">请输入城市名称</string>
    <string name="janus">视频</string>
    <string name="construction">施工</string>
    <string name="sign_up">注册</string>
    <string name="sign_in">登录</string>
    <string name="txt_register">注册</string>
    <string name="no_account">没有账户？现在创建</string>
    <string name="txt_welcome_back">欢迎再次回来</string>
    <string name="txt_account">账号或者手机号</string>
    <string name="txt_password">密码</string>
    <string name="back">返回</string>
    <string name="txt_welcome_join_us">欢迎加入我们</string>
    <string name="user_name">用户名</string>
    <string name="phone">手机号</string>
    <string name="exit_toast">再点一次退出</string>


    <string name="txt_activate_page">设备激活界面</string>

    <!--device相关-->
    <string name="dev">设备</string>
    <string name="dev_status_unauthenticated">"设备未认证"</string>
    <string name="dev_status_authenticating">"设备认证中......\n请勿断开电源！"</string>
    <string name="dev_status_authenticated">"设备已认证"</string>
    <string name="dev_status_authenticate_failed">"设备认证失败"</string>

    <string name="dev_action_atc_again"><u>重新认证</u></string>
    <string name="dev_action_start_activate">开始激活</string>

    <!--标题-->
    <string name="txt_back">返回</string>
    <string name="next_step">下一步</string>
    <string name="txt_confirm">确认</string>

    <string name="title_atc">设备认证</string>
    <string name="title_door_list">门类型</string>
    <string name="title_camera_type">摄像头类型</string>
    <string name="title_atc_info">设备激活信息</string>
    <string name="title_dev_list">设备绑定列表</string>

    <string name="activate_version">激活版本</string>
    <string name="model_version_info">激活版本信息</string>

    <!--door-->
    <string name="chose_door_type">请选择门类型</string>

    <!--camera-->
    <string name="camera_type_90">90°摄像头</string>
    <string name="camera_type_0">0°摄像头</string>
    <string name="chose_camera_type">请选择摄像头类型</string>

    <!--janus-->
    <string name="go_video_room">进入VideoRoom界面</string>
    <string name="go_video_call">进入VideoCall界面</string>
    <string name="video_room">VideoRoom</string>
    <string name="txt_mute">静音</string>
    <string name="txt_switch_camera">切换</string>
    <string name="txt_me">我</string>
    <string name="get_permission_success">获取权限成功！</string>
    <string name="get_permission_failed">获取权限失败！</string>

    <!--button title-->
    <string name="face_recognition">人脸识别</string>
    <string name="video_call">呼叫</string>
    <string name="video_cancel">取消</string>
    <string name="video_hangup">挂断</string>
    <string name="view_video">查看</string>
    <string name="open_door">开门</string>

    <!--二维码相关-->
    <string name="qr_code_text">二维码</string>
    <string name="scan_qr_code_warn">将二维码放入框内，即可自动扫描</string>
    <string name="scan_qr_code_from_photo_wrong">没有找到二维码</string>
    <string name="album_text">相册</string>

    <string name="identify_qr">识别二维码</string>
    <string name="cancel">取消</string>
    <string name="save_pic">保存图片</string>
    <string name="scanning_qr_code">点击扫描二维码</string>
    <string name="illegable_code">非法条形码数据</string>
    <string name="add_code_failed">添加失败, 数据已存在</string>
    <string name="code_exist">此条码/二维码已存在</string>
    <string name="please_scan_exact_bar_code">请扫描正确的条形码</string>
    <string name="please_scan_exact_qr_code">请扫描正确的二维码</string>
    <string name="short_address">短地址:</string>
    <string name="location">位置: </string>

</resources>