<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.qtimes.jetpackdemokotlin.ui.views.BackTitleBar
            android:id="@+id/back_title_atc_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/title_atc_info"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/iv_atc_info"
            android:layout_width="@dimen/y180"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y80"
            android:contentDescription="@string/title_atc"
            android:src="@drawable/ic_info"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/back_title_atc_info" />
        <TextView
            android:id="@+id/tv_door_type_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y10"
            android:text=""
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_atc_info" />

        <TextView
            android:id="@+id/txt_atc_version_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/y60"
            android:text="@string/activate_version"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_door_type_name" />

        <EditText
            android:id="@+id/et_model_version_info"
            android:layout_width="@dimen/x450"
            android:layout_height="@dimen/y70"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/y30"
            android:background="@drawable/ticket_edit_text_selector"
            android:gravity="center"
            android:hint="@string/model_version_info"
            android:paddingStart="@dimen/y20"
            android:paddingEnd="@dimen/y10"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_atc_version_info" />

        <Button
            android:id="@+id/btn_door_activate_confirm"
            android:layout_width="@dimen/x300"
            android:layout_height="@dimen/y70"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/y120"
            android:background="@drawable/ticket_button_selector"
            android:text="@string/txt_confirm"
            android:textColor="@color/ticket_button_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_model_version_info"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>