<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="com.qtimes.jetpackdemokotlin.model.AtcState" />

        <import type="android.R" />

        <variable
            name="devVM"
            type="com.qtimes.jetpackdemokotlin.viewmodel.DeviceViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.qtimes.jetpackdemokotlin.ui.views.BackTitleBar
            android:id="@+id/atc_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y80"
            app:title="@string/title_atc"
            app:titleTextSize="@dimen/x10"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/txt_atc_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y240"
            android:text="@{devVM.atcState.desc}"
            android:textColor='@{devVM.txtAtcStatusColor}'
            android:textSize="@dimen/x36"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="@dimen/x35"
            android:layout_height="@dimen/x35"
            android:contentDescription="@string/dev_action_atc_again"
            android:src="@drawable/ic_ac"
            app:layout_constraintCircle="@id/txt_atc_again"
            app:layout_constraintCircleAngle="270"
            app:layout_constraintCircleRadius="@dimen/x80"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/txt_atc_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/x35"
            android:layout_marginTop="@dimen/y80"
            android:text="@string/dev_action_atc_again"
            android:textColor="@color/authenticate_btn_text"
            android:textSize="@dimen/x28"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_atc_status" />

        <Button
            android:id="@+id/btn_go_activate"
            android:layout_width="@dimen/x300"
            android:layout_height="@dimen/y70"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/y180"
            android:background="@drawable/ticket_button_selector"
            android:clickable="@{AtcState.AUTHENTICATED == devVM.atcState}"
            android:text="@string/dev_action_start_activate"
            android:textColor="@color/ticket_button_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_atc_again" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>