<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.qtimes.jetpackdemokotlin.model.CameraAngle" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.qtimes.jetpackdemokotlin.ui.views.BackTitleBar
            android:id="@+id/camera_type_back"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y80"
            app:title="@string/title_camera_type"
            app:titleTextSize="@dimen/x18"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/txt_camera_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y80"
            android:layout_marginLeft="@dimen/x100"
            android:layout_marginTop="@dimen/y120"
            android:layout_marginRight="@dimen/x100"
            android:background="@color/theme_color"
            android:gravity="center"
            android:text="@string/chose_camera_type"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/camera_type_back" />

        <RadioGroup
            android:id="@+id/rg_camera_angle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x100"
            android:layout_marginRight="@dimen/x100"
            android:background="@color/white"
            android:paddingStart="@dimen/x50"
            android:paddingTop="@dimen/y30"
            android:paddingBottom="@dimen/y30"
            app:layout_constraintTop_toBottomOf="@id/txt_camera_title"
            tools:ignore="RtlSymmetry">

            <RadioButton
                android:id="@+id/camera_angle_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:padding="@dimen/y30"
                android:text="@{CameraAngle.ZERO.desc}" />

            <RadioButton
                android:id="@+id/camera_angle_90"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/y30"
                android:text="@{CameraAngle.NINETY.desc}" />
        </RadioGroup>

        <Button
            android:id="@+id/btn_camera_type_next_step"
            android:layout_width="@dimen/x240"
            android:layout_height="@dimen/y70"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/y120"
            android:background="@drawable/ticket_button_selector"
            android:text="@string/next_step"
            android:textColor="@color/ticket_button_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rg_camera_angle" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>