<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_video"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_video_call"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <SurfaceView
                android:id="@+id/ijk_surfaceView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="-16dp"
                tools:layout_editor_absoluteY="148dp" />

            <Button
                android:id="@+id/btn_face_recognition"
                android:layout_width="@dimen/x140"
                android:layout_height="@dimen/x140"
                android:layout_marginBottom="@dimen/y140"
                android:background="@drawable/btn_face_shape"
                android:text="@string/face_recognition"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/btn_video_call" />

            <Button
                android:id="@+id/btn_video_call"
                android:layout_width="@dimen/x140"
                android:layout_height="@dimen/x140"
                android:layout_marginBottom="@dimen/y140"
                android:background="@drawable/btn_call_shape"
                android:text="@string/video_call"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintLeft_toRightOf="@id/btn_face_recognition"
                app:layout_constraintRight_toRightOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_home_num"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y765"
            android:layout_gravity="bottom"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_home_num"
                android:layout_width="match_parent"
                android:layout_height="@dimen/y100"
                android:background="#EAECE9"
                android:hint="请输入门牌号"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:lines="1"
                android:textAlignment="center"
                android:textColor="#575A57"
                android:textColorHint="#575A57"
                android:textSize="@dimen/x36"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_video_calling"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_calling_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y400"
                android:maxWidth="@dimen/x600"
                android:textColor="@color/white"
                android:textSize="@dimen/x40"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_cancel_calling"
                android:layout_width="@dimen/x140"
                android:layout_height="@dimen/x140"
                android:layout_marginBottom="@dimen/y140"
                android:background="@drawable/btn_hangup_shape"
                android:text="@string/video_cancel"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_video_coming"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:visibility="gone">

            <ImageView
                android:id="@+id/iv_video_coming"
                android:layout_width="@dimen/x350"
                android:layout_height="@dimen/x350"
                android:layout_marginTop="@dimen/y200"
                android:src="@drawable/ic_video_coming"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y20"
                android:text="楼下有访客"
                android:textColor="@color/white"
                android:textSize="@dimen/x40"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_video_coming" />

            <Button
                android:id="@+id/btn_hangup"
                android:layout_width="@dimen/x140"
                android:layout_height="@dimen/x140"
                android:layout_marginBottom="@dimen/y140"
                android:background="@drawable/btn_hangup_shape"
                android:text="@string/video_hangup"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/btn_view_video" />

            <Button
                android:id="@+id/btn_view_video"
                android:layout_width="@dimen/x140"
                android:layout_height="@dimen/x140"
                android:layout_marginBottom="@dimen/y140"
                android:background="@drawable/btn_call_shape"
                android:text="@string/view_video"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintLeft_toRightOf="@id/btn_hangup"
                app:layout_constraintRight_toRightOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>